Changes in Version 2.2-2

  o Added new interface exams2ilias() for the open-source ILIAS learning
    management system (http://www.ilias.de/). This is essentially a
    convenience wrapper to exams2qti12(), tweaking a few defaults and
    employing a somewhat modified XML template.

  o More fixups in LaTeX code prior to processing with pandoc_convert(),
    especially \url{...} is replaced by \href{...}{\texttt{...}} now to
    ensure typesetting in typewriter font.

  o When including R input code chunks in .Rmd exercises, code decoration
    is switched off by default now (knitr option highlight=FALSE) so that
    the output can be combined with standard LaTeX templates. The default
    can be changed either in the individual .Rmd code chunks, e.g.,
    ```{r, highlight=TRUE}, or by setting highlight=TRUE in the call to
    xweave(). For the latter case a new LaTeX template plain-highlight.tex
    is also provided, e.g., to be used via:
    exams2pdf("lm.Rmd", highlight = TRUE, template = "plain-highlight")

  o exams2pdf() gained an argument texdir=NULL. By default a temporary
    directory is created for running LaTeX (and cleaned up subsequently).
    But using texdir="/path/to/dir" an output directory can be specified
    so that the LaTeX files can be inspected, e.g., for debugging.


Changes in Version 2.2-1

  o Added new interface exams2pandoc() which can generate a wide variety
    of output formats via pandoc. The main purpose is to generate .docx
    output files (or .odt). The output format can be controlled through
    a template in either LaTeX, HTML, or Markdown format.

  o New function stresstest_exercise() for "stress testing" of exercises,
    i.e., rerunning the exercise many times and capturing how the outcome
    depends on the simulated input parameters.

  o New (and still somewhat experimental) function match_exams_call()
    that can be employed to query which exams2xyz() function was called