@@ -5,6 +5,13 @@ Changes in Version 2.2-2
     convenience wrapper to exams2qti12(), tweaking a few defaults and
     employing a somewhat modified XML template.
 
+  o tex2image() has been rewritten to use the LaTeX class {standalone}
+    instead of manually handling boxes and cropping of the PDF output.
+    For converting to raster graphics like PNG (the default), R package
+    "magick" is now used rather than system("convert ...") calls to
+    ImageMagick on the system. For conversion to SVG it is still necessary
+    to call pdfcrop and pdf2svg on the system.
+
   o More fixups in LaTeX code prior to processing with pandoc_convert(),
     especially \url{...} is replaced by \href{...}{\texttt{...}} now to
     ensure typesetting in typewriter font.
